# RAG-Chatbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: chainlit_app.py  main.py
src/agents/: agent.py  model.py  persistence_layer.py  prompts.py  service.py  states.py  tools.py
src/configs/: config_openai.py  config_pinecone.py  config_postgres.py
src/data/: vectorstore.py
