[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "chainlit>=2.6.3",
    "fastapi>=0.115.14",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-pinecone>=0.2.11",
    "langgraph>=0.6.2",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langsmith>=0.4.8",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.9",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
